Updated ipynb, data folder
- Added areas for improvement / TO DO
- Added some more sample data

--- a/Yelp Cuisine Similarity and Recommendations.ipynb
+++ b/Yelp Cuisine Similarity and Recommendations.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Read-Business-dataset\" data-toc-modified-id=\"Read-Business-dataset-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Read Business dataset</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#There-are-some-businesses-with-only-1-category,-some-with-37\" data-toc-modified-id=\"There-are-some-businesses-with-only-1-category,-some-with-37-1.0.1\"><span class=\"toc-item-num\">1.0.1&nbsp;&nbsp;</span>There are some businesses with only 1 category, some with 37</a></span></li><li><span><a href=\"#Keep-only-businesses-with-Restaurants-/-Food-/-Nightlife-as-one-of-the-categories\" data-toc-modified-id=\"Keep-only-businesses-with-Restaurants-/-Food-/-Nightlife-as-one-of-the-categories-1.0.2\"><span class=\"toc-item-num\">1.0.2&nbsp;&nbsp;</span>Keep only businesses with Restaurants / Food / Nightlife as one of the categories</a></span></li><li><span><a href=\"#Let's-call-it-df_fb-for-food-&amp;-beverage-businesses\" data-toc-modified-id=\"Let's-call-it-df_fb-for-food-&amp;-beverage-businesses-1.0.3\"><span class=\"toc-item-num\">1.0.3&nbsp;&nbsp;</span>Let's call it df_fb for food &amp; beverage businesses</a></span></li></ul></li></ul></li><li><span><a href=\"#Loading-Review-dataset-in-chunks\" data-toc-modified-id=\"Loading-Review-dataset-in-chunks-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Loading Review dataset in chunks</a></span></li><li><span><a href=\"#For-each-cuisine-required,-output-the-subset-of-concatenated-reviews\" data-toc-modified-id=\"For-each-cuisine-required,-output-the-subset-of-concatenated-reviews-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>For each cuisine required, output the subset of concatenated reviews</a></span></li><li><span><a href=\"#Convert-a-dataframe-of-all-cuisine-reveiws-into-Tf-Idf-Document-Term-Matrix\" data-toc-modified-id=\"Convert-a-dataframe-of-all-cuisine-reveiws-into-Tf-Idf-Document-Term-Matrix-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Convert a dataframe of all cuisine reveiws into Tf-Idf Document Term Matrix</a></span></li><li><span><a href=\"#Recommend-Cuisines-to-100-Customers\" data-toc-modified-id=\"Recommend-Cuisines-to-100-Customers-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Recommend Cuisines to 100 Customers</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#Import-Order-Data\" data-toc-modified-id=\"Import-Order-Data-5.0.1\"><span class=\"toc-item-num\">5.0.1&nbsp;&nbsp;</span>Import Order Data</a></span></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Read-Business-dataset\" data-toc-modified-id=\"Read-Business-dataset-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Read Business dataset</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#There-are-some-businesses-with-only-1-category,-some-with-37\" data-toc-modified-id=\"There-are-some-businesses-with-only-1-category,-some-with-37-1.0.1\"><span class=\"toc-item-num\">1.0.1&nbsp;&nbsp;</span>There are some businesses with only 1 category, some with 37</a></span></li><li><span><a href=\"#Keep-only-businesses-with-Restaurants-/-Food-/-Nightlife-as-one-of-the-categories\" data-toc-modified-id=\"Keep-only-businesses-with-Restaurants-/-Food-/-Nightlife-as-one-of-the-categories-1.0.2\"><span class=\"toc-item-num\">1.0.2&nbsp;&nbsp;</span>Keep only businesses with Restaurants / Food / Nightlife as one of the categories</a></span></li><li><span><a href=\"#Let's-call-it-df_fb-for-food-&amp;-beverage-businesses\" data-toc-modified-id=\"Let's-call-it-df_fb-for-food-&amp;-beverage-businesses-1.0.3\"><span class=\"toc-item-num\">1.0.3&nbsp;&nbsp;</span>Let's call it df_fb for food &amp; beverage businesses</a></span></li></ul></li></ul></li><li><span><a href=\"#Loading-Review-dataset-in-chunks\" data-toc-modified-id=\"Loading-Review-dataset-in-chunks-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Loading Review dataset in chunks</a></span></li><li><span><a href=\"#For-each-cuisine-required,-output-the-subset-of-concatenated-reviews\" data-toc-modified-id=\"For-each-cuisine-required,-output-the-subset-of-concatenated-reviews-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>For each cuisine required, output the subset of concatenated reviews</a></span></li><li><span><a href=\"#Convert-a-dataframe-of-all-cuisine-reveiws-into-Tf-Idf-Document-Term-Matrix\" data-toc-modified-id=\"Convert-a-dataframe-of-all-cuisine-reveiws-into-Tf-Idf-Document-Term-Matrix-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Convert a dataframe of all cuisine reveiws into Tf-Idf Document Term Matrix</a></span></li><li><span><a href=\"#Calculate-cosine-similarity-for-all-pairs\" data-toc-modified-id=\"Calculate-cosine-similarity-for-all-pairs-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Calculate cosine similarity for all pairs</a></span></li><li><span><a href=\"#Recommend-Cuisines-to-100-Customers\" data-toc-modified-id=\"Recommend-Cuisines-to-100-Customers-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Recommend Cuisines to 100 Customers</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#Import-Order-Data\" data-toc-modified-id=\"Import-Order-Data-6.0.1\"><span class=\"toc-item-num\">6.0.1&nbsp;&nbsp;</span>Import Order Data</a></span></li></ul></li></ul></li><li><span><a href=\"#Areas-for-Improvement\" data-toc-modified-id=\"Areas-for-Improvement-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Areas for Improvement</a></span></li></ul></div>"
    ]
   },
   {
@@ -1273,6 +1273,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculate cosine similarity for all pairs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
@@ -1920,6 +1927,29 @@
    "source": [
     "print(top_cuisine.cuisine[2])\n",
     "print(top_cuisine.Top_Cuisine[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Areas for Improvement\n",
+    "1. Cosine Similarity ranges from 0.7 to 1.0 which shows pretty high correlation between most cuisines and doesn't necessarily reflect reality: this could be because Yelp businesses are tagged to multiple categories (anywhere from 1 to 37 as we saw) - so a review could end up in the same cuisine if it is for business A's first category, but also if it is for business B's 10th category\n",
+    "    - I purposely maintained all categories so as not to cut down on reviews for some of the already limited categories, but if we first truncate categories list for all businesses to the top 3-5, we may have less overlap of reviews and a wider (more accurate) cosine similarity range\n",
+    "    - Also, we still cannot be sure that the top 3-4 are the primary cuisines of a business, but this is still something to keep in mind\n",
+    "    - Instead of purely cosine similarity, we can also use LDA topic modelling, and the resulting document-topic distribution as features as done in [this R analysis](https://rpubs.com/Belethia/117506)\n",
+    "    \n",
+    "&nbsp;\n",
+    "  \n",
+    "2. Ingredients list might be more appropriate for this purpose: combine ingredients from several recipes tagged to a particular cuisine, and use this ingredient compilation to build the Tf-Idf vectors instead \n",
+    "    - There is an ingredients-cuisine dataset [from Yummly](https://www.kaggle.com/c/whats-cooking/data?select=train.json.zip), however it is not as exhaustive as the Yelp dataset in the cuisines covered and did not have most of the cuisines that we were interested in \n",
+    "  \n",
+    "&nbsp;\n",
+    "\n",
+    "3. We could also tune the Tf-Idf vectorizer more: \n",
+    "    - Setting thresholds to exclude terms that are in very few documents/cuisines (min_df), and those that are not unique to any of the documents (max_df)\n",
+    "    - Exclude domain specific stopwords like 'yummy', 'food', 'meal'\n",
+    "    - Include bi-grams or tri-grams - for example, while 'fish' could be common to many cuisines, 'fish sauce' would only be common to a few specific cuisines"
    ]
   }
  ],
